--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-/* color variables */
+/* variables */
 :root {
   --primary-bg-color: #dbfaf8;
+  --padding-mobile: 1rem;
+  --padding: 3rem;
 }
 
 * {
@@ -11,4 +13,18 @@
 
 html {
   font-size: 100%;
+  letter-spacing: 0.6px;
+  line-height: 1.4rem;
+}
+
+h2 {
+  font-size: 1.6rem;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+img {
+  width: 100%;
 }
