--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 /* variables */
 :root {
   --primary-bg-color: #dbfaf8;
+  --primary-text-container-color: hsl(176, 76%, 96%);
   --padding-mobile: 1rem;
   --padding: 3rem;
+  --container-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  --container-radius: 5px;
 }
 
 * {
@@ -12,17 +18,20 @@
 }
 
 html {
+  font-family: "Poppins", sans-serif;
   font-size: 100%;
   letter-spacing: 0.6px;
   line-height: 1.4rem;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  font-weight: 300;
 }
 
 img {
