--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,12 +1,16 @@
 #about-section {
   background-color: var(--primary-bg-color);
+  padding: var(--padding) var(--padding-mobile);
 }
 
 .text-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  background-color: var(--primary-text-container-color);
   padding: var(--padding-mobile);
+  box-shadow: var(--container-shadow);
+  border-radius: var(--container-radius);
 }
 
 .section-heading {
