--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
 
 /* variables */
 :root {
@@ -18,13 +19,14 @@
 }
 
 html {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Courgette", cursive, sans-serif;
   font-size: 100%;
-  letter-spacing: 0.6px;
+  letter-spacing: 1px;
   line-height: 1.4rem;
 }
 
 h2 {
+  font-family: "Courgette", cursive;
   font-size: 1.4rem;
   font-weight: 500;
 }
