--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -10,11 +10,24 @@
   background-repeat: no-repeat;
 }
 
+.hero-container::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(60, 60, 60, 0.6);
+}
+
 .hero-text-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: absolute;
+  gap: 1rem;
   color: var(--primary-text-container-color);
   left: 0;
   right: 0;
@@ -23,8 +36,10 @@
   margin: auto;
   text-align: center;
   padding: 0 1rem;
+  text-shadow: 2px 2px 8px #000000;
 }
 
-.hero-text-container p {
-  font-size: 1.6rem;
+#tagline {
+  font-family: "Courgette", cursive;
+  font-size: 1.2rem;
 }
