--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --primary-text-color: hsl(176, 76%, 8%);
   --main-btn-color: hsl(176, 76%, 20%, 0.7);
   --primary-text-container-color: hsl(176, 76%, 96%);
-
+  --mobile-nav-height: 3.5rem;
   --padding-mobile: 1rem;
   --padding: 3rem;
   --container-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
