--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,11 +28,11 @@ header {
   display: none;
   flex-direction: column;
   gap: 1rem;
-  height: calc(100vh - var(--mobile-nav-height));
+  min-height: calc(100vh - var(--mobile-nav-height));
+  /* max-height: calc(100vh - var(--mobile-nav-height)); */
   width: 100%;
-
   list-style: none;
-  padding: var(--padding-mobile);
+  padding: 50% 0;
   background-color: var(--primary-bg-color);
 }
 
@@ -49,7 +49,8 @@ header {
   display: block;
   text-decoration: none;
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  font-weight: 300;
   width: 100%;
 }
 
