--- a/src/components/Buttons/MainBtn/MainBtn.css
+++ b/src/components/Buttons/MainBtn/MainBtn.css
@@ -2,11 +2,19 @@
   padding: 8px;
   background-color: transparent;
 
-  color: var(--primary-text-color);
-  border: solid 2px var(--primary-text-color);
   font-size: 1.4rem;
   border-radius: 2px;
 
   cursor: pointer;
   transition: all 0.3s;
+}
+
+.main-btn.btn-dark {
+  color: var(--primary-text-color);
+  border: solid 2px var(--primary-text-color);
+}
+
+.main-btn.btn-light {
+  color: var(--secondary-text-color);
+  border: solid 2px var(--secondary-text-color);
 }
