--- a/src/pages/WeddingPage/WeddingPage.css
+++ b/src/pages/WeddingPage/WeddingPage.css
@@ -2,6 +2,20 @@
   border-bottom: solid 1px rgba(128, 128, 128, 0.2);
 }
 
+.content-section.included {
+  background-color: var(--secondary-bg-color);
+  color: var(--secondary-text-color);
+}
+
+.wedding-list {
+  list-style-position: inside;
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.2rem;
+}
+
 .wedding-list-item {
   font-weight: 300;
 }
