add responsive styling to nav

--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -23,3 +23,9 @@
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-7px) rotateZ(-45deg);
 }
+
+@media (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+}
