--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 /* variables */
 :root {
-  --primary-bg-color: hsl(175, 40%, 97%);
+  --primary-bg-color: hsl(175, 40%, 95%);
   --secondary-bg-color: hsl(233, 21%, 24%);
   --primary-text-color: hsl(233, 21%, 10%);
   --secondary-text-color: hsl(174, 41%, 90%);
@@ -14,6 +14,7 @@
   --mobile-nav-height: 3.5rem;
   --padding-mobile: 1rem;
   --padding: 3rem;
+  --nav-padding-lg: 1rem 3rem;
   --container-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   --container-radius: 2px;
 }
@@ -26,7 +27,7 @@
 
 html {
   font-size: 100%;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.5px;
   line-height: 1.5rem;
 }
 
