--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
 
 /* variables */
 :root {
-  --primary-bg-color: hsl(175, 40%, 95%);
+  --primary-bg-color: hsl(175, 50%, 95%);
   --secondary-bg-color: hsl(233, 21%, 24%);
   --primary-text-color: hsl(233, 21%, 10%);
   --secondary-text-color: hsl(174, 41%, 90%);
@@ -28,7 +29,6 @@
 html {
   font-size: 100%;
   letter-spacing: 0.5px;
-  line-height: 1.5rem;
 }
 
 body {
@@ -37,20 +37,20 @@ body {
 }
 
 h1 {
-  font-family: "Courgette", cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 2.5rem;
-  font-weight: 500;
 }
 
 h2 {
-  font-family: "Courgette", cursive;
-  font-size: 1.8rem;
-  font-weight: 500;
+  font-family: "Dancing Script", cursive;
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 
 p {
   font-size: 1.2rem;
   font-weight: 300;
+  line-height: 1.5rem;
 }
 
 em {
