add style changes

--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,9 @@ img {
   background-color: transparent;
   box-shadow: none;
 }
+
+@media (min-width: 768px) {
+  .content-section {
+    padding: var(--padding) var(--padding);
+  }
+}
