--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,11 +1,8 @@
 .hero-container {
   display: flex;
-  position: relative;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: calc(100vh - var(--mobile-nav-height));
-
+  height: calc(100svh - var(--mobile-nav-height));
   background-size: cover;
   background-repeat: no-repeat;
 }
