--- a/src/components/CeremonyCard/CeremonyCard.css
+++ b/src/components/CeremonyCard/CeremonyCard.css
@@ -5,18 +5,20 @@
   gap: 1rem;
   max-width: 400px;
   background-color: var(--primary-text-container-color);
-  padding: var(--padding-mobile) 0;
+  padding: 0 0 var(--padding-mobile) 0;
   border-radius: var(--container-radius);
   box-shadow: var(--container-shadow);
   transition: all 0.2s;
 }
 
-.ceremony-card-text {
-  padding: 0 1rem;
+.ceremony-card h1 {
+  margin-top: 2rem;
+  font-size: 2.5rem;
 }
 
 .ceremony-card button {
   width: auto;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
