--- a/src/pages/Homepage/Sections/About/About.css
+++ b/src/pages/Homepage/Sections/About/About.css
@@ -1,10 +1,18 @@
+.about {
+  justify-content: center;
+}
+
 #dee-pic {
-  border-radius: 50%;
-  width: 150px;
+  border-radius: var(--container-radius);
+  width: 250px;
 }
 
 @media (min-width: 768px) {
+  .content-section.about {
+    flex-direction: row;
+  }
+
   #dee-pic {
-    width: 200px;
+    width: 250px;
   }
 }
