--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 :root {
   --primary-bg-color: hsl(185, 60%, 97%);
   --secondary-bg-color: hsl(230, 30%, 25%);
+  --accent-color: hsl(185, 50%, 80%);
   --primary-text-color: hsl(233, 21%, 10%);
   --secondary-text-color: hsl(175, 40%, 95%);
   --main-btn-color: hsl(176, 76%, 20%, 0.7);
