--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--primary-bg-color);
+  background-color: var(--accent-color);
 
   height: var(--mobile-nav-height);
   padding: var(--padding-mobile);
@@ -34,7 +34,7 @@ header {
   width: 100%;
   list-style: none;
   padding: 50% 0;
-  background-color: var(--primary-bg-color);
+  background-color: var(--accent-color);
 }
 
 .nav-menu a {
