fix color on footer links

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,6 +22,10 @@ footer {
   gap: 1rem;
 }
 
+.nav-item.footer {
+  opacity: 1;
+}
+
 .nav-link.footer {
   font-size: 1rem;
   color: var(--primary-text-color);
