--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ body {
 h1 {
   font-family: "Dancing Script", cursive;
   font-size: 3rem;
+  text-align: center;
 }
 
 h2 {
@@ -59,6 +60,7 @@ p {
 
 em {
   opacity: 0.7;
+  text-align: center;
 }
 
 a {
@@ -97,6 +99,11 @@ img {
   gap: var(--padding);
   max-width: 1200px;
 }
+
+/* .section-heading {
+  align-self: center;
+  justify-self: center;
+} */
 
 .text-container {
   display: flex;
