add responsive query to img grid

--- a/src/components/ImgGrid/ImgGrid.css
+++ b/src/components/ImgGrid/ImgGrid.css
@@ -15,3 +15,9 @@
   height: 100%;
   filter: grayscale(100%);
 }
+
+@media (min-width: 900px) {
+  .img-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
