--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,10 +1,14 @@
 .hero-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: calc(100svh - var(--mobile-nav-height));
+  background-image: url("../../assets/white-rose-hero-mobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
 }
 
 .hero-text-container {
@@ -38,6 +42,11 @@
 }
 
 @media (min-width: 900px) {
+  .hero-container {
+    min-height: calc(100vh - 120px);
+    background-image: url("../../assets/white-rose.jpg");
+  }
+
   #hero-text {
     font-size: 6rem;
   }
