add naming img + comitment img

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 :root {
   --primary-bg-color: hsl(185, 60%, 97%);
   --secondary-bg-color: hsl(230, 30%, 25%);
-  --accent-color: hsla(190, 50%, 65%);
+  --accent-color: hsl(189, 50%, 65%);
   --primary-text-color: hsl(233, 21%, 10%);
   --secondary-text-color: hsl(0, 0%, 100%);
   --main-btn-color: hsl(176, 76%, 20%, 0.7);
