--- a/src/components/CeremonyCard/CeremonyCard.css
+++ b/src/components/CeremonyCard/CeremonyCard.css
@@ -11,6 +11,10 @@
   transition: all 0.2s;
 }
 
+.ceremony-card .image-container {
+  max-height: 250px;
+}
+
 .ceremony-card h1 {
   margin-top: 2rem;
   font-size: 2.5rem;
