clean up unused images + imports

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -42,7 +42,12 @@ footer {
   width: 100px;
   height: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+
+.hitched-container span {
+  font-size: 0.6rem;
 }
 
 .aoic-container {
