--- a/src/components/TestimonialSwiper/TestimonialSwiper.css
+++ b/src/components/TestimonialSwiper/TestimonialSwiper.css
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: var(--accent-color);
+  height: 400px;
 }
 
 .homepage-quote-container div {
