--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,12 +14,21 @@ header {
   border-bottom: solid 1px rgba(200, 200, 200, 0.5);
 }
 
-.logo {
-  font-size: 1.2rem;
-  font-weight: 600;
-  width: auto;
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.logo-img-container {
+  width: 40px;
+}
+
+#logo-text {
   color: var(--secondary-text-color);
-  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .nav-menu {
@@ -111,25 +120,25 @@ header {
 .social-links-menu {
   display: flex;
   list-style: none;
-
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 900px) {
   .navbar {
     padding: var(--nav-padding-lg);
-    flex-direction: column;
     gap: 1rem;
     height: auto;
     position: relative;
-    justify-content: center;
   }
 
   .nav-menu {
     display: flex;
     position: relative;
     height: auto;
-    width: fit-content;
+    width: auto;
+    align-items: center;
     flex-direction: row;
     padding: 0;
     z-index: inherit;
@@ -146,7 +155,7 @@ header {
     justify-content: center;
     width: auto;
     position: relative;
-    padding: 5px;
+
     border-radius: 2px;
     opacity: 1;
   }
@@ -195,7 +204,7 @@ header {
   .ceremony-dropdown {
     position: absolute;
     background-color: var(--accent-color);
-    opacity: 0.9;
+    opacity: 0.95;
 
     margin: 0;
     top: 0;
